<resources>
    <string name="app_name">Fandora</string>

    <!--    label-->
    <string name="label_home">Home</string>
    <string name="label_donation">Donation</string>
    <string name="label_mypage">mypage</string>
    <string name="label_donation_map_nearby_centers">Nearby donation centers</string>
    <string name="label_donation_companies_awaiting">Companies Awaiting Donations</string>
    <string name="label_recognize_by_photo">Recognize by photo</string>
    <string name="label_artist_name">Artist\'s name</string>
    <string name="label_album_name">Album name</string>
    <string name="label_loading">Searching the album eagerly!</string>
    <string name="label_album_count">Number of albums</string>
    <string name="label_donation_date">Donation date</string>
    <string name="label_delivery_method">Delivery Method</string>
    <string name="label_complete_application">Complete Application</string>
    <string name="label_donation_review">Donation Review</string>
    <string name="label_apply_for_donation">Apply for Donation</string>
    <string name="label_top_donation_fandom">Top Donating Fandom of the Month</string>
    <string name="label_delivery_review">Fans\' gifts, delivered! 💝</string>
    <string name="label_ongoing_donation">Ongoing Donation</string>
    <string name="label_home_fan_joined">This month we joined hands with\n777 fans!</string>
    <string name="label_home_fan_count">777</string>

    <!--    description-->
    <string name="description_splash">스플래쉬 화면</string>
    <string name="description_login_image">로그인 이미지</string>
    <string name="description_home_logo_image">홈 로고 이미지</string>
    <string name="description_home_character">홈 캐릭터 이미지</string>
    <string name="description_home_banner_image">홈 배너 이미지</string>
    <string name="description_login_google">구글 로그인 버튼</string>
    <string name="description_donation_btn_search">기부 기업 검색</string>
    <string name="description_btn_donation_detail_back">기업 상세 뒤로가기 버튼</string>
    <string name="description_donation_detail_location">기업 상세 위치 아이콘</string>
    <string name="description_donation_detail_direct">기업 상세 직접 기부</string>
    <string name="description_donation_detail_mail">기업 상세 메일 기부</string>
    <string name="description_donation_apply_btn_back">기부 신청 뒤로가기 버튼</string>
    <string name="description_donation_apply_camera">기부 신청 카메라 이미지</string>
    <string name="description_donation_apply_btn_date">기부 신청 달력 버튼</string>
    <string name="description_mypage_btn_setting">마이페이지 설정 버튼</string>
    <string name="description_mypage_btn_total_donate">마이페이지 기부 내역 버튼</string>
    <string name="description_camera_btn_back">카메라 뒤로가기 버튼</string>
    <string name="description_camera_frame">카메라 프레임</string>
    <string name="description_camera_btn_album">카메라 앨범 버튼</string>
    <string name="description_camera_btn_capture">카메라 촬영 버튼</string>
    <string name="description_map_btn_back">구글 지도 뒤로가기 버튼</string>
    <string name="description_loading_image">Loading Image</string>
    <string name="description_btn_donation_review">기부 리뷰 상세 버튼</string>

    <!--    hint-->
    <string name="hint_text">Text</string>

    <string name="mypage_nickname">Dear valued member, %1$s!</string>
    <string name="mypage_donated_count">You have donated a total of %1$s times!</string>
</resources>