<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="315:605"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_camera_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_camera_btn_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_camera_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="180dp"
        android:contentDescription="@string/description_camera_frame"
        android:src="@drawable/frame_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="315:605"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_camera_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="56dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_camera_btn_album"
        android:src="@drawable/ic_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_camera_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_camera_btn_capture"
        android:src="@drawable/ic_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>