<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fandora.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_donation"
        android:name="com.example.fandora.ui.donation.DonationFragment"
        android:label="@string/label_donation"
        tools:layout="@layout/fragment_donation">
        <action
            android:id="@+id/action_donation_to_donation_detail"
            app:destination="@id/navigation_donation_detail" />
        <action
            android:id="@+id/action_donation_to_map"
            app:destination="@id/navigation_map" />
    </fragment>
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.fandora.ui.mypage.MyPageFragment"
        android:label="@string/label_mypage"
        tools:layout="@layout/fragment_mypage" >
        <action
            android:id="@+id/action_mypage_to_donation_detail"
            app:destination="@id/navigation_donation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_donation_detail"
        android:name="com.example.fandora.ui.donationdetail.DonationDetailFragment"
        android:label="기업 상세"
        tools:layout="@layout/fragment_donation_detail" >
        <action
            android:id="@+id/action_donation_detail_to_donation_apply"
            app:destination="@id/navigation_donation_apply" />
        <argument
            android:name="company"
            app:argType="com.example.fandora.data.model.response.CompanyResponse"
            app:nullable="true" />
        <argument
            android:name="donation"
            app:nullable="true"
            app:argType="com.example.fandora.data.model.response.DonationResponse" />
    </fragment>
    <fragment
        android:id="@+id/navigation_donation_apply"
        android:name="com.example.fandora.ui.apply.DonationApplyFragment"
        android:label="기부 신청"
        tools:layout="@layout/fragment_donation_apply" >
        <action
            android:id="@+id/action_donation_apply_to_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_donation_apply_to_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="companyId"
            app:argType="integer" />
        <argument
            android:name="albumTitle"
            app:argType="string"
            android:defaultValue=""
            app:nullable="true" />
        <argument
            android:name="artistName"
            app:argType="string"
            android:defaultValue=""
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.fandora.ui.apply.CameraFragment"
        android:label="CameraFragment"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_camera_to_donation_apply"
            app:destination="@id/navigation_donation_apply"
            app:popUpTo="@id/navigation_donation_apply"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_camera_to_loading"
            app:destination="@id/navigation_loading" />
        <argument
            android:name="companyId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.fandora.ui.donation.MapFragment"
        android:label="MapFragment"
        tools:layout="@layout/fragment_map"/>
    <fragment
        android:id="@+id/navigation_loading"
        android:name="com.example.fandora.ui.apply.LoadingFragment"
        android:label="LoadingFragment"
        tools:layout="@layout/fragment_loading" />
</navigation>